--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   --clr-primary-100: hsl(222, 100%, 95%);
 
   --clr-neutral-900: hsl(232, 12%, 13%);
-  --clr-neutral-400: hsl(0, 0%, 95%);
+  --clr-neutral-400: #f2f2f2;
   --clr-neutral-700: #1e1e1e;
   --clr-neutral-100: #ffffff;
 
