--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@ button:hover,
 button:focus-visible {
   background-color: var(--clr-neutral-100);
   color: var(--clr-primary-400);
+  border: solid var(--clr-primary-400) thin;
 }
 
 header {
@@ -261,7 +262,7 @@ header {
 
 .nav-list {
   display: flex;
-  gap: var(--size-400);
+  gap: var(--size-500);
 }
 
 .nav-list a {
@@ -291,7 +292,7 @@ header img {
 }
 
 .benefit-icon img {
-  max-width: 300px;
+  max-width: 280px;
   object-fit: contain;
 }
 
@@ -352,6 +353,7 @@ select {
 .questionaire button:hover {
   background-color: var(--clr-neutral-100);
   color: var(--clr-primary-400);
+  border: solid var(--clr-primary-400) thin;
 }
 
 .questionaire .button-div {
@@ -449,12 +451,33 @@ select {
   border-radius: 15px;
 }
 
+.testimonial-wrapper {
+  position: relative;
+}
+
+.testimonial-wrapper .slide-buttons {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.testimonial-wrapper #prev-card {
+  left: -10px;
+  display: none;
+}
+
+.testimonial-wrapper #next-card {
+  right: -10px;
+}
+
 .testimonials {
   padding-block: 2rem;
   display: flex;
   gap: 10rem;
   scroll-snap-type: x mandatory;
   overflow-x: scroll;
+  align-items: center;
   scroll-behavior: smooth;
 }
 
@@ -468,7 +491,7 @@ select {
   scroll-snap-align: center;
   border-radius: 0.5rem;
   margin: 0 auto;
-  padding: 1.5rem;
+  padding: 2rem;
   background-color: var(--clr-neutral-100);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -699,8 +722,14 @@ footer a:hover {
   grid-template-columns: 1fr 25% 1fr;
 }
 
+.mail-small {
+  margin-right: 1rem;
+}
 @media (width > 50em) {
   .call-footer {
+    display: none;
+  }
+  .mail-small {
     display: none;
   }
 }
@@ -729,5 +758,8 @@ footer a:hover {
   }
   .benefit-icon img {
     max-width: 200px;
+  }
+  .mail-big {
+    display: none;
   }
 }
