--- a/style.css
+++ b/style.css
@@ -702,17 +702,26 @@ footer a:hover {
   }
 }
 .call-footer {
-  background-color: var(--clr-neutral-100);
+  background-color: var(--clr-primary-400);
   padding-block: 1.1rem;
   text-align: center;
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
+  box-shadow: 0px -6px 15px 1px rgba(0, 0, 0, 0.5);
   a {
     text-decoration: none;
     padding: 1rem 5rem;
-    color: var(--clr-primary-400);
+    color: var(--clr-neutral-100);
+  }
+  a:visited {
+    color: var(--clr-neutral-100);
+    text-decoration: none;
+  }
+  a:link {
+    color: var(--clr-neutral-100);
+    text-decoration: none;
   }
 }
 
@@ -724,6 +733,15 @@ footer a:hover {
 
 .mail-small {
   margin-right: 1rem;
+}
+
+.cost-effective {
+  img {
+    max-width: 55px;
+  }
+  p {
+    margin-left: 15px;
+  }
 }
 @media (width > 50em) {
   .call-footer {
