--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ button:focus-visible {
 }
 
 header {
-  padding-block: 1.55rem;
+  padding-block: 1.5rem;
   border-bottom: solid hsla(228, 39%, 23%, 0.267) thin;
   background-color: white;
   position: fixed;
@@ -275,7 +275,7 @@ header {
 }
 
 header img {
-  max-width: 8.5rem;
+  max-width: 15rem;
 }
 
 .bubble-section {
@@ -779,5 +779,8 @@ footer a:hover {
   }
   .mail-big {
     display: none;
+  }
+  header img {
+    max-width: 12rem;
   }
 }
